--- a/PiRob/app/src/main/AndroidManifest.xml
+++ b/PiRob/app/src/main/AndroidManifest.xml
@@ -6,11 +6,10 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/baseicon"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/Theme.AppCompat.Light.NoActionBar">
         <activity android:name="com.example.reeteyaz.NewActivity"></activity>
         <activity android:name="com.example.reeteyaz.MainActivity">
 
