--- a/PiRob/app/build.gradle
+++ b/PiRob/app/build.gradle
@@ -13,7 +13,7 @@ android {
     compileSdkVersion 29
     buildToolsVersion "29.0.2"
     defaultConfig {
-        applicationId "com.example.reeteyaz"
+        applicationId 'com.srknzl.PiRobot'
         minSdkVersion 21
         targetSdkVersion 29
         versionCode 1
