--- a/PiRob/app/src/main/AndroidManifest.xml
+++ b/PiRob/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.reeteyaz">
+    package="com.srknzl.PiRobot">
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
 
@@ -10,8 +10,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-        <activity android:name="com.example.reeteyaz.NewActivity"></activity>
-        <activity android:name="com.example.reeteyaz.MainActivity">
+        <activity android:name="com.srknzl.PiRobot.NewActivity"></activity>
+        <activity android:name="com.srknzl.PiRobot.MainActivity">
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
